<resources>
    <string name="app_name">Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="search">Search</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="price">$%1$d</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_all">View All</string>
    <string name="username_or_e_mail">Username or e-mail</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="checkout">Checkout</string>
    <string name="_items">%1$d Items</string>
    <string name="subtotal">SUBTOTAL $%1$s</string>
    <string name="product_added_to_cart">Product added to Cart</string>
    <string name="product_already_on_cart">Product already on Cart</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="instamobile">Instamobile</string>
    <string name="categories">Categories</string>
    <string name="signup">Sign Up</string>
    <string name="search_products">Search Products</string>
    <string name="view_collection">View Collection</string>
    <string name="description">Description</string>
</resources>
