<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:iconTint="@android:color/white"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_gallery"
            android:iconTint="@android:color/white"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_search"
            android:icon="@mipmap/ic_search"
            android:iconTint="@android:color/white"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@mipmap/ic_cart"
            android:iconTint="@android:color/white"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/nav_my_account"
            android:icon="@mipmap/ic_account"
            android:iconTint="@android:color/white"
            android:title="@string/my_account" />
    </group>

</menu>
