<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/margin"
            android:text="wisam"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_username_input"
            style="@style/Instamobile.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_or_e_mail"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_password_input"
            style="@style/Instamobile.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:theme="@style/Instamobile.Button" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/create_new_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:color/transparent"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>