<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shopping_cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/shopping_cart_top_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/shopping_cart_top_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/shopping_cart_items_number" />

    <TextView
        android:id="@+id/shopping_cart_items_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/_items"
        app:layout_constraintBottom_toTopOf="@id/shopping_cart_check_out_btn" />


    <TextView
        android:id="@+id/shopping_cart_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@id/shopping_cart_check_out_btn"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/shopping_cart_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/shopping_cart_items_number" />

    <Button
        android:id="@+id/shopping_cart_check_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>